css z-index fix

--- a/assets/css/quiz-style.css
+++ b/assets/css/quiz-style.css
@@ -40,20 +40,19 @@ section.quiz {
 }
 
 .owl-theme .owl-controls .owl-buttons div {
-color: #FFF;
-display: inline-block;
-zoom: 1;
-margin: 5px;
-padding: 3px 10px;
-font-size: 16px;
--webkit-border-radius: 0px;
--moz-border-radius: 0px;
-border-radius: 0px;
-background: #869791;
-filter: Alpha(Opacity=50);
-opacity: 0.5;
-width: 100px;
-position: static;
+  color: #FFF;
+  display: inline-block;
+  zoom: 1;
+  margin: -5px;
+  padding: 3px 10px;
+  font-size: 16px;
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px;
+  background: #869791;
+  filter: Alpha(Opacity=50);
+  opacity: 0.5;
+  width: 100px;
 }
 
 .owl-buttons {
@@ -255,6 +254,7 @@ ul.responses li.selected {
     margin-left: 0 !important;
     border-radius: 0;
     padding: 80px 0 !important;
+    z-index: 10 !important;
 
   }
 
@@ -264,7 +264,7 @@ ul.responses li.selected {
     margin-right: 0 !important;
     border-radius: 0;
     padding: 80px 0 !important;
-    z-index: 10;
+    z-index: 10 !important;
   }
 
 
@@ -336,5 +336,6 @@ ul.responses li.selected {
 }
 
 .owl-carousel .owl-wrapper-outer.autoHeight {
-  margin-bottom: 30px
+  margin-bottom: 30px;
+  z-index: 1;
 }
